Revision history for Perl extension XML::LibXSLT.

1.96    Unknown
    - Apply patch from RT#83028
        - $Config{libs} is not needed

1.95    2016-07-30
    - Hopefully fix RT#116461
        - https://rt.cpan.org/Public/Bug/Display.html?id=116461
        - “Makefile.PL shouldn't run "pkg-config libexslt" if LIBS or INC were
        provided”
        - Thanks to NWELLNHOF for the report and a suggested fix.

1.94    2015-01-19
    - Fix builds on older versions of libxslt.
        - Breakage caused by the MaxVars change.
        - https://rt.cpan.org/Ticket/Display.html?id=101605
        - Thanks to Deyan Ginev for the report.

1.93    2015-01-17
    - Add the ->max_vars function to set the MaxVars.
        - https://rt.cpan.org/Ticket/Display.html?id=101413
        - Thanks to Thomas Krichel for the report/request.

1.92    2014-04-12
    - Add scripts/tag-release.pl .

1.91    2014-04-12
    - t/cpan-changes.t : minimum version of Test::CPAN::Changes.
        - This is to avoid test failures such as:
            - http://www.cpantesters.org/cpan/report/5af7d5eb-6bfa-1014-b84e-eb85912f2992

1.90    2014-04-10
    - Handle $Config{dlext} correctly on Windows.
        - https://rt.cpan.org/Ticket/Display.html?id=94516
        - Thanks to kmx for the report and fix.
    - Add t/pod.t .
        - Fix some POD problems.
    - Add t/cpan-changes.t and convert Changes to CPAN::Changes format.
    - Add t/style-trailing-space.t.
        - Remove trailing whitespace.

1.89    2014-03-05
    - Fix memory management of node-sets returned from extension functions.
      Without calling xsltExtensionInstructionResultRegister, node-sets
      could be freed too early, leading to strange errors or segfaults.
        - https://bugzilla.gnome.org/show_bug.cgi?id=562302
        - https://rt.cpan.org/Ticket/Display.html?id=93349
        - Thanks to Alexander Schepanovski for the report.
    - Document input_callbacks methods
    - Don't register libxml2 input callbacks twice