@@ -3,6 +3,9 @@ Revision history for Perl extension XML::LibXSLT.
 1.96    Unknown
     - Apply patch from RT#83028
         - $Config{libs} is not needed
+    - Move to git/GitHub:
+        - https://github.com/shlomif/perl-XML-LibXSLT .
+        - For Travis-CI/etc.
 
 1.95    2016-07-30
     - Hopefully fix RT#116461
